Corrige teste unitario